<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">"Eve Fucapi "</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>

    <string name="title_home">Início</string>

    <string name="facebook_app_id">364826527250828</string>
    <string name="fb_login_protocol_scheme">fb364826527250828</string>

    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="minimum_password">Senha muito curta, mínimo 6 caracteres!</string>
    <string name="auth_failed">Autenticação falhou, verifique seu email e senha</string>
    <string name="title_activity_login">Entrar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_sign_up">Não tem uma conta? Registre-se!</string>
    <string name="btn_link_to_login">Já Registrado. Entre!</string>
    <string name="btn_forgot_password">Esqueceu sua Senha?</string>
    <string name="btn_reset_password">Alterar Senha</string>
    <string name="btn_back"><![CDATA[<< Voltar]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Esqueceu sua Senha?</string>
    <string name="forgot_password_msg">Precisamos apenas de seu email registrado para enviar instruções de alteração de senha.</string>
    <string name="hint_name">Nome</string>
    <string name="nh_giro_cultural">Giro Cultural</string>
    <string name="nh_girocultural_gmail_com">girocultural@gmail.com</string>
    <string name="logout">Sair</string>

    <string name="next">Próximo</string>
    <string name="skip">Pular</string>
    <string name="start">Começar</string>

    <string name="title_slide1">Where´s the party today?</string>
    <string name="desc_slide1">Find it here! </string>
    <string name="title_slide2">The best parties in one place!</string>
    <string name="desc_slide2">This app for that!</string>
    <string name="title_slide3">List name</string>
    <string name="desc_slide3">Put your name at list!</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
